src/test/ui/error-codes/E0207.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/E0207.rs:13:6
   |
13 | impl<T: Default> Foo { //~ ERROR E0207
   |      ^ unconstrained type parameter

error: aborting due to previous error

